# grok-research-mcp

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION.md  METHODOLOGY.md  README.md  pyproject.toml
docs/: endpoints.md  walrus-2026-03-26.md
grok_research_mcp/: __main__.py  server.py
grok_research_mcp/auth/: browser.py  store.py
grok_research_mcp/client/: endpoints.py  session.py
grok_research_mcp/tools/: research.py
tests/: test_main.py
tests/auth/: test_browser.py  test_store.py
tests/client/: test_endpoints.py  test_session.py
tests/server/: test_server.py
tests/tools/: test_research.py
