[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grok-research-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "playwright>=1.40",
    "httpx>=0.27",
    "pywin32>=306",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "respx>=0.20",
]

[project.scripts]
grok-research-mcp = "grok_research_mcp.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=grok_research_mcp --cov-report=term-missing"

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
